feat: 重构模块并解决构建问题
Co-authored-by: traeagent <traeagent@users.noreply.github.com>